.provarCaches/00D6C0000000xA6UAI/objects/sked__Admin_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked__Value_New__c</fullName>
        <description>Replace the old Value field which is not editable by subscribers. If the two fields have values, the new one will be used.</description>
        <label>Value (New)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Value__c</fullName>
        <label>Value</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Admin Setting</label>
    <pluralLabel>Admin Settings</pluralLabel>
</CustomObject>